discussion/kv_engine/112809/112809_rev18_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-33463: Add support for collections for magma

Add support for maintaining collection manifests and stats for magma.

Change-Id: I0fe8c047fb28be74c1472b971796e5075d45b456

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Scott Lashley
Date: 2019-09-05 23:11:38.000000000
Message: 
Uploaded patch set 18.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2019-09-05 23:42:56.000000000
Message: 
Patch Set 18: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/23139/ : FAILURE

Failure of a GoogleTest test:

TransportProtocols/ErrmapTest.GetErrmapOk/Mcbp, where GetParam() = Mcbp (0 ms) ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/23139/ )

Failure of a CTest test  53/194 Test  #48: ep_testsuite_dcp.full_eviction.magma ......................................... ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/23139/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/19754/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-linux-master/22168/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-linux-master-CE/3844/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format/20778/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv-engine-cv-perf/13053/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-threadsanitizer-master/14078/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/6802/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2019-09-06 16:28:44.000000000
Message: 
Patch Set 18: Verified+1

Build Successful 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/19754/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-linux-master/22168/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-linux-master-CE/3844/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format/20778/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv-engine-cv-perf/13053/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-threadsanitizer-master/14078/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/6802/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/23146/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Jim Walker
Date: 2019-09-09 14:26:58.000000000
Message: 
Patch Set 18:

(2 comments)

only the 1 issue to address
Line:218, engines/ep/src/magma-kvstore/magma-kvstore.cc -> nit: would be tidier to add a constructor to Slice for const char*, that can then do the strlen during construction. Not needed for this patch but would help tidy it up

Line:2436, engines/ep/src/magma-kvstore/magma-kvstore.cc -> const reference

----------------------------------------------------------------------------------------------------------------------
Author: Jim Walker
Date: 2019-09-09 14:27:09.000000000
Message: 
Patch Set 18: Code-Review-1
----------------------------------------------------------------------------------------------------------------------
Author: Scott Lashley
Date: 2019-09-09 16:37:51.000000000
Message: 
Patch Set 18:

(2 comments)
Line:218, engines/ep/src/magma-kvstore/magma-kvstore.cc -> Done

Line:2436, engines/ep/src/magma-kvstore/magma-kvstore.cc -> I'm confused by this comment.
Changing to const Collections::VB::PersistedStats& stats (including change to magma-kvstore.h) doesn't compile. 

/mnt/tmp/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2429:50: error: passing ‘const Collections::VB::PersistedStats’ as ‘this’ argument discards qualifiers [-fpermissive]
     auto encodedStats = stats.getLebEncodedStats();
                                                  ^
In file included from /mnt/tmp/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.h:21:0,
                 from /mnt/tmp/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:18:
/mnt/tmp/kv_engine/engines/ep/src/collections/collection_persisted_stats.h:43:17: note:   in call to ‘std::__cxx11::string Collections::VB::PersistedStats::getLebEncodedStats()’
     std::string getLebEncodedStats();

This code is identical to couch-kvstore.
Not quite sure what the comment is looking for.

----------------------------------------------------------------------------------------------------------------------
Author: Scott Lashley
Date: 2019-09-10 21:08:06.000000000
Message: 
Patch Set 18:

(1 comment)
Line:2436, engines/ep/src/magma-kvstore/magma-kvstore.cc -> Sorry still a bit confused.
Attempting to pass in as const causes the following error...

/mnt/tmp1/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2429:50: error: passing ‘const Collections::VB::PersistedStats’ as ‘this’ argument discards qualifiers [-fpermissive]
     auto encodedStats = stats.getLebEncodedStats();
                                                  ^
In file included from /mnt/tmp1/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.h:21:0,
                 from /mnt/tmp1/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:18:
/mnt/tmp1/kv_engine/engines/ep/src/collections/collection_persisted_stats.h:43:17: note:   in call to ‘std::__cxx11::string Collections::VB::PersistedStats::getLebEncodedStats()’
     std::string getLebEncodedStats();

And I can't do a const_cast because its not passed in by ref.

Seems like this all needs changed at once when both couchstore and magma can be changed when the interface is changed.

----------------------------------------------------------------------------------------------------------------------
Author: Jim Walker
Date: 2019-09-11 07:49:12.000000000
Message: 
Patch Set 18:

(2 comments)
Line:2436, engines/ep/src/magma-kvstore/magma-kvstore.cc -> The saveCollectionsStats function here is local to magma so no need to change couch-kvstore 

1) The MagmaKVStore::saveCollectionStats should accept a const Collections::VB::PersistedStats& stats  

2) Because C++ will only allow const methods to be invoked on const types (const &, const *) getLebEncodedStats() should be correctly changes to be a const method, as it makes no changes to the object.

std::string getLebEncodedStats() const;

If you can't get it to work you'll have to provide more info, like the patch you can't compile as I cannot see why the requested change doesn't compile for you

Line:2436, engines/ep/src/magma-kvstore/magma-kvstore.cc -> ok, i'll put a minor MB into switch this all over in cheshire cat development phase

----------------------------------------------------------------------------------------------------------------------
Author: Jim Walker
Date: 2019-09-10 08:27:58.000000000
MISMATCHED INLINE COMMENT
Line:2436, engines/ep/src/magma-kvstore/magma-kvstore.cc -> You just need to update this to be const http://src.couchbase.org/source/xref/trunk/kv_engine/engines/ep/src/collections/collection_persisted_stats.h#43
----------------------------------------------------------------------------------------------------------------------
